test/Fail/Issue1342.err
Issue1342.agda:29.10-11: error: [WithOnFreeVariable]
Cannot 'with' on variable x bound in a module telescope (or
patterns of a parent clause)
when inferring the type of x
